<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="button_downloaded">Downloaded</string>

    <string name="title_activity_detail">DetailActivity</string>

    <string name="glide_string">Glide - Image Loading Library by BumpTech</string>
    <string name="load_app_string">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_string">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>

    <string name="chanel_name">Download Project</string>
    <string name="chanel_des">Download Project from Internet</string>
    <string name="warning_select_file">Please select file to download</string>

    <string name="file_name">File Name:</string>
    <string name="status">Status:</string>
    <string name="ok">OK</string>
    <string name="success">Success</string>
    <string name="fail">Fail</string>
</resources>
